# maccal

./: LICENSE  Makefile  README.md  pyproject.toml
.cursor/rules/: testing.mdc
benchmarks/: bench_query.py
examples/: find_free_time.py  list_calendars.py  search_events.py
spec/: overview.md
src/maccal/: __init__.py  _convert.py  availability.py  calendars.py  events.py  store.py  types.py
tests/: conftest.py  test_availability.py  test_events.py  test_store.py  test_types.py
